# AIS-NLP10S

./: README.md  gitignore  main.py  pyproject.toml  requirements.txt
AIS-NLP10S/session-07/: vc07-01_langchain.ipynb  vc07-02_langchain.py  vc07-03_lc.py  vc07-04-text_loader.py  vc07-05-local_chat.py  vc07-05b-local_chat_with_memory.py  vc07-06_Newsarticle Summary.py  vc07-07-RAG-Bot.py  vc07-07_RAG2_SentenceSimilarity.py  vc07-07_RAG_pureLC.py  vc07-08_langchain Tools.ipynb  vc07-09_langchain Agents.ipynb
data/index.db/: my_index.pkl
session-07/: .env  requirements.txt  requirements1.txt  vc07-01_model_load.ipynb  vc07-02_lc_prompts.py  vc07-03_lc_output_parsers.py  vc07-04-text_loader.py  vc07-04-text_loader_error.py  vc07-04b-chunking_embed_ST.py  vc07-05-local_chat.py  vc07-05b-local_chat_with_memory.py  vc07-06_wikipedia_article summary.py  vc07-07-docs_load_index.py  vc07-07-rag-bot.py  vc07-07_rag2_sentence_similarity.py  vc07-07_rag_pure_lc.py  vc07-07a-docs_load_index.py  vc07-07b_rag2_sentence_similarity.py  vc07-08X_langchain tools.ipynb  vc07-08_langchain simple tool.ipynb  vc07-08_langchain tools.ipynb  vc07-09_langchain Agents.ipynb  vc07-09x_image2story.py
session-07/ais_utils/: Model_from_LC_Groq.py  Model_from_LC_Ollama.py  docs_load_index.py
session-07/data/: my_file.txt
session-08/: 1.vectordb_creation.py  2_Retrieval_QA-Bot.py  2_retrieval_generation.py  faiss.index  faiss.index_metadata.json
session-08/ais_rag/: chains.py  chunker.py  cleaner.py  loader.py  model.py  prompt_builder.py  vectordb.py
session-09/: .env  Lesson_1_Basic Agent .ipynb
session-09/Agents_01_examples/: aisModels.py  crai_L2_research_write_article.ipynb  crai_L3_customer_support.ipynb  crai_L4_tools_customer_outreach.ipynb  (+2 more)
(+15 files in other folders)
