[project]
name = "ais-nlp10s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.10.0",
    "langchain-community>=0.3.21",
    "langchain-ollama>=0.3.1",
    "langchain-openai>=0.3.12",
    "ruff>=0.11.4",
    "sentence-transformers>=4.0.2",
    "typing-extensions>=4.13.1",
    "wikipedia>=1.4.0",
]
